cmake_minimum_required(VERSION 3.0)
project(Yolov5) 	
set(OpenCV_DIR "path/to/opencv/build") 
add_definitions(-DAPI_EXPORTS)			
option(CUDA_USE_STATIC_CUDA_RUNTIME OFF)		
set(CMAKE_CXX_STANDARD 11)		
set(CMAKE_BUILD_TYPE  Debug)			
set(THREADS_PREFER_PTHREAD_FLAG ON)		
find_package(Threads)				
set(CMAKE_CUDA_ARCHITECTURES 86)		
find_package(CUDA REQUIRED)			
include_directories(${CUDA_INCLUDE_DIRS})		
enable_language(CUDA)  				
include_directories(${PROJECT_SOURCE_DIR}/include)		
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)			
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Ofast -D_MWAITXINTRIN_H_INCLUDED") 
find_package(OpenCV QUIET)	
include_directories(${OpenCV_INCLUDE_DIRS})		
add_executable(Yolov5 ${PROJECT_SOURCE_DIR}/Yolov5.cpp)
target_link_libraries(Yolov5 "nvinfer.lib" "nvinfer_plugin.lib" "nvonnxparser.lib")  	# 链接nvinfer.lib  nvinfer_plugin.lib等依赖
target_link_libraries(Yolov5 ${OpenCV_LIBS})     		
target_link_libraries(Yolov5 ${CUDA_LIBRARIES})  		
target_link_libraries(Yolov5 Threads::Threads)     		
target_link_libraries(Yolov5 ${TARGET_NAME} nvonnxparser)		
