cmake_minimum_required(VERSION 3.18)
project(Yolov5) 	
set(OpenCV_DIR "path/to/opencv/build") 
set(OpenCV_INCLUDE_DIRS ${OpenCV_DIR}\\include)
set(OpenCV_LIB_DIRS ${OpenCV_DIR}\\x64\\vc16\\lib) 
set(OpenCV_LIBS "opencv_world480d.lib" "opencv_world480.lib")				
set(CMAKE_CUDA_ARCHITECTURES 86)		
find_package(CUDA REQUIRED)			
enable_language(CUDA)  						
find_package(OpenCV QUIET)
include_directories(${CUDA_INCLUDE_DIRS})		
include_directories(${OpenCV_INCLUDE_DIRS}) 
link_directories(${OpenCV_LIB_DIRS})  		
add_executable(Yolov5 ${PROJECT_SOURCE_DIR}/Yolov5.cpp)
target_link_libraries(Yolov5 "nvinfer.lib" "nvinfer_plugin.lib" "nvonnxparser.lib")  	
target_link_libraries(Yolov5 ${OpenCV_LIBS})     		
target_link_libraries(Yolov5 ${CUDA_LIBRARIES})  			
